Changes to indez and login html

--- a/SEngBytesBits/web/main.css
+++ b/SEngBytesBits/web/main.css
@@ -23,6 +23,12 @@ and open the template in the editor.
 }
 
 .wrapper {
+    
     text-align: center;
+    vertical-align: middle;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-weight: lighter;
+    font-size: 4px;
+    
 }
 
