--- a/SEngBytesBits/web/example.css
+++ b/SEngBytesBits/web/example.css
@@ -8,7 +8,7 @@ html, body {
 
 body {
 	background-image: url(back1.jpg);
-	font-family: 'Lato', Times, 'Times New Roman', serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 	font-size: 16px;
 	color: #eee;
 	margin-bottom: 40px;
@@ -87,17 +87,19 @@ ul {
 	}
 
 	ul li:nth-child(odd) {
-		background-color: rgba(216,216,216,.8);
+		background-color: rgba(216,216,216,.9);
 	}
 
 	ul li:nth-child(1) {
-		background-color: rgba(250,250,250,0);
+		background-color: rgba(50,50,50,0);
 		font-weight: bold;
+                                font-size: 30px;
+                                color: rgba(0,0,0,1);
+                                text-shadow: -1px 2px rgba(13,207,175, 1);
 	}
 
 	ul li:hover:nth-child(n+2)  {
 		background-color: rgba(13,207,175,.85);
-
 	}
 	
 
